# native-platform

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .lgtm.yml  build.gradle  gradle.properties  gradlew.bat  readme.md  settings.gradle  settings.gradle.kts
file-events/: Cargo.toml  build.gradle  build.rs  build.zig
file-events/src/file-events/cpp/: apple_fsnotifier.cpp  file-events-version.cpp  generic_fsnotifier.cpp  jni_support.cpp  linux_fsnotifier.cpp  services.cpp  win_fsnotifier.cpp
file-events/src/file-events/headers/: apple_fsnotifier.h  command.h  exception.h  generic_fsnotifier.h  jni_support.h  linux_fsnotifier.h  win_fsnotifier.h
file-events/src/main/java/net/rubygrapefruit/platform/file/: FileEvents.java  FileEventsRust.java  FileWatcher.java
file-events/src/main/java/net/rubygrapefruit/platform/internal/jni/: AbstractFileEventFunctions.java  AbstractNativeFileEventFunctions.java  LinuxFileEventFunctions.java  (+3 more)
file-events/src/main/java/net/rubygrapefruit/platform/rust/: RustJniCall.java
file-events/src/main/rust/: main.rs  version.rs
file-events/src/test/groovy/net/rubygrapefruit/platform/file/: AbstractFileEventFunctionsTest.groovy  BasicFileEventFunctionsTest.groovy  FileEventFunctionsOverflowTest.groovy  FileEventFunctionsStressTest.groovy  HardLinkFileEventFunctionsTest.groovy  MovedDirectoriesFileEventFunctionsTest.groovy  SymlinkFileEventFunctionsTest.groovy  SyntheticFileEventFunctionsTest.groovy  WindowsFileEventFunctionsTest.groovy
file-events/src/test/groovy/net/rubygrapefruit/platform/rust/: RunSomeRust.groovy
(+474 files in other folders)
