[package]
name = "file-events-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"

[build-dependencies]
bindgen = "0.65.1"

[lib]
crate_type = ["cdylib"]
path = "src/main/rust/main.rs"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
# Strip doesn't seem to work with crossbeam on any platforms
# But running strip maually does the job anyway
#strip = true
